# ParamTunerCV

./: .gitignore  5.15.0  CALLBACK_FIX_SUMMARY.md  CLAUDE.md  ENHANCED_THRESHOLDING_USAGE.md  FINAL_SOLUTION_SUMMARY.md  FUNCTIONALITY_FIX_COMPLETE.md  GEMINI.md  README.md  ROI_DISPLAY_FIX.md  THRESHOLD_TYPE_FIX.md  WINDOW_DUPLICATION_FIX.md  callback_debug.py  check.py  pyproject.toml  requirements.md  requirements.txt  runtime_callback_debug.py  test_functionality.py  test_minimal_simple.py  test_minimal_thresholding.py  test_roi_refresh.py  test_threshold_simple.py  test_threshold_types.py  test_thresholding.py  test_visual_difference.py
.claude/: settings.local.json
.kiro/specs/comprehensive-docstrings/: design.md
.kiro/specs/improved-analysis-ui/: design.md  requirements.md  tasks.md
.kiro/specs/improved-thresholding-ui/: requirements.md
.kiro/steering/: product.md  structure.md  tech.md
docstrings/: requirements.md  tasks.md
examples/: 01_basic_usage.py  02_window_control.py  03_trackbar_definitions.py  04_app_debug_mode.py  05_viewer_factory_usage.py  README.md
src/: __init__.py
src/ParamTunerCV/analysis/export/: __init__.py  export_manager.py
src/ParamTunerCV/analysis/plotting/: __init__.py
src/ParamTunerCV/analysis/threshold/: image_processor.py
src/ParamTunerCV/config/: viewer_config.py
src/ParamTunerCV/controls/: __init__.py
src/ParamTunerCV/core/: __init__.py  image_viewer.py
src/ParamTunerCV/events/: mouse_handler.py
src/ParamTunerCV/gui/: __init__.py  theme_manager.py  thresholding_manager.py  thresholding_window.py  tooltip.py
src/analysis/: __init__.py
src/analysis/export/: export_manager.py
src/analysis/plotting/: plot_analyzer.py
src/analysis/threshold/: image_processor.py
src/config/: __init__.py  viewer_config.py
src/controls/: __init__.py  trackbar_manager.py
src/core/: image_viewer.py
src/events/: __init__.py  mouse_handler.py
src/gui/: __init__.py  analysis_control_window.py  enhanced_export_dialog.py  enhanced_widgets.py  enhanced_widgets_test.py  export_dialog.py  plot_customization_dialog.py  theme_manager.py  theme_test.py  thresholding_manager.py  thresholding_window.py  tooltip.py  window_manager.py
src/utils/: __init__.py  viewer_factory.py
