[project]
name = "ParamTunerCV"
version = "0.1.1"
description = "Parameter tuning tool for computer vision"
authors = [{ name = "Harsh Ranjan", email = "harshranjan194@gmail.com"  }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
keywords = ["computer-vision", "opencv", "parameter-tuning", "image-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "opencv-contrib-python>=4.10.0",
]

[project.urls]
Homepage = "https://github.com/harsh194/ParamTunerCV"
Repository = "https://github.com/harsh194/ParamTunerCV"
Issues = "https://github.com/harsh194/ParamTunerCV/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
