[project]
name = "ParamTunerCV"
version = "0.1.2"
description = "Parameter tuning tool for computer vision"
authors = [{ name = "Harsh Ranjan", email = "harshranjan194@gmail.com"  }]
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"
keywords = ["computer-vision", "opencv", "parameter-tuning", "image-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "opencv-contrib-python>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/harsh194/ParamTunerCV"
Repository = "https://github.com/harsh194/ParamTunerCV"
Issues = "https://github.com/harsh194/ParamTunerCV/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
